# DNSFlow

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json
dnsflow-common/: Cargo.toml
dnsflow-common/src/: lib.rs
dnsflow-ebpf/: Cargo.toml
dnsflow-ebpf/src/: main.rs
dnsflow-hook/: Cargo.toml
dnsflow-hook/src/: lib.rs
dnsflow-shim/: Cargo.toml
dnsflow-shim/src/: lib.rs
docs/: api-reference.md  architecture.md  configuration.md  development.md  installation.md  interception.md  security.md  troubleshooting.md  windows-deployment.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_seed.sql
src-tauri/src/: debug.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: config.rs  dns.rs  launcher.rs  mod.rs  process.rs  rules.rs
src-tauri/src/db/: config.rs  database.rs  mod.rs  query_logger.rs
src-tauri/src/db/tests/: config_test.rs
src-tauri/src/dns/: mod.rs  proxy.rs  resolver.rs  rules.rs
src-tauri/src/dns/tests/: mod.rs  resolver_test.rs  rules_test.rs
src-tauri/src/ebpf/: loader.rs  maps.rs  mod.rs  tests.rs
src-tauri/src/platform/: dns_packet.rs  linux.rs  mod.rs  windows.rs
src-tauri/src/process/: lookup.rs  mod.rs  monitor.rs
src-tauri/src/process/tests/: lookup_test.rs  mod.rs  monitor_test.rs
src-tauri/tests/platform/: windows_process_test.rs
src/components/: AppSelector.tsx  DnsServerForm.tsx  DnsServerList.tsx  Layout.css  Layout.tsx  RuleForm.tsx  RulesList.tsx
src/components/__tests__/: Layout.test.tsx
src/components/ui/: EmptyState.tsx  ErrorBanner.tsx  SkeletonBlock.tsx  ToggleSwitch.tsx
src/lib/: ThemeContext.tsx  constants.ts  tauri.ts  utils.ts
src/pages/: Dashboard.tsx  DnsServers.tsx  QueryLog.tsx  Rules.tsx  Settings.tsx
src/pages/__tests__/: Dashboard.test.tsx  Settings.test.tsx
src/test/__mocks__/: tauri.ts
